After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 791735 - adaptivedemux: fix log integer format
adaptivedemux: fix log integer format
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal minor
: 1.13.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-12-18 12:12 UTC by Jun Xie
Modified: 2018-01-04 22:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix log integer format (1.09 KB, patch)
2017-12-18 12:14 UTC, Jun Xie
committed Details | Review
cancellable: add g_cancellable_chain() (8.71 KB, patch)
2018-01-04 22:20 UTC, Christian Hergert
rejected Details | Review

Description Jun Xie 2017-12-18 12:12:43 UTC
gst_adaptive_demux_stream_update_fragment_info:<'':video_00>[00m range start:0 end:18446744073709551615

range_start/range_end shall be logged as G_GINT64_FORMAT
Comment 1 Jun Xie 2017-12-18 12:14:23 UTC
Created attachment 365691 [details] [review]
fix log integer format
Comment 2 Edward Hervey 2017-12-18 13:10:17 UTC
commit f995bcf85a5bb3eb94164ed6d60938b4de6e40ab (HEAD -> master, origin/master, origin/HEAD)
Author: Jun Xie <jun.xie@samsung.com>
Date:   Mon Dec 18 20:39:07 2017 +0800

    adaptivedemux: fix log integer format
    
    range_start/range_end shall be logged as G_GINT64_FORMAT
    
    https://bugzilla.gnome.org/show_bug.cgi?id=791735
Comment 3 Christian Hergert 2018-01-04 22:20:29 UTC
Created attachment 366334 [details] [review]
cancellable: add g_cancellable_chain()

This allows cancelling a GCancellable when any number of
dependent GCancellable have been cancelled. This is useful when
you have multiple ways to cancel operations in an interface,
such as a cancellation button, and internal async API callbacks
from unrelated subsystems.
Comment 4 Christian Hergert 2018-01-04 22:21:13 UTC
Sorry about that, fat fingered the bug id to git-gz.