adaptivedemux: fix log integer format

range_start/range_end shall be logged as G_GINT64_FORMAT

https://bugzilla.gnome.org/show_bug.cgi?id=791735